# equityIQ

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  design.md  docker-compose.yml  pyproject.toml  requirements.txt  roadmap.md
.claude/: CLAUDE.md
agents/: __init__.py  a2a_server.py  base_agent.py  compliance_checker.py  economy_watcher.py  market_conductor.py  momentum_tracker.py  pulse_monitor.py  risk_guardian.py  signal_synthesizer.py  valuation_scout.py
api/: __init__.py  alpaca_routes.py  chat.py  error_handlers.py  exceptions.py  routes.py  webhooks.py  zerodha_routes.py
config/: __init__.py  analyst_personas.py  data_contracts.py  logging.py  settings.py
deploy/: cloudrun.yaml  setup-firestore.sh  setup-secrets.sh
docs/: 01_project_overview.md  api-reference.md  architecture.drawio  architecture.md  deployment.md  spec-driven-development-prompt.md
evaluation/: backtester.py  prediction_tracker.py  quality_assessor.py
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json
integrations/: __init__.py  alerts.py  alpaca.py  portfolio_sync.py  zerodha.py
memory/: __init__.py  firestore_vault.py  history_retriever.py  insight_vault.py  vertex_memory.py
models/: __init__.py  model_store.py  risk_calculator.py  signal_fusion.py
scripts/: health_check.sh  launch_agents.sh  stop_agents.sh
tests/: test_a2a_server.py  test_agent_cards.py  test_alerts.py  test_alpaca.py  test_analyst_personas.py  test_api_routes.py  test_app.py  test_backtester.py  test_base_agent.py  test_benchmarks.py  test_cd_workflow.py  test_chat.py  test_ci_workflow.py  test_cloudrun_config.py  test_compliance_checker.py  test_data_contracts.py  test_docker_compose.py  test_dockerfile.py  test_dockerignore.py  test_documentation.py  test_e2e.py  test_economy_watcher.py  test_error_handling.py  test_firestore_setup.py  test_firestore_vault.py  test_fred_connector.py  test_health_check_script.py  test_history_retriever.py  test_history_view.py  test_insight_vault.py  test_launch_scripts.py  test_logging.py  test_makefile.py  test_market_conductor.py  test_model_store.py  test_momentum_tracker.py  test_news_connector.py  test_nextjs_scaffold.py  test_pipeline.py  test_pipeline_wiring.py  (+19 more)
tools/: __init__.py  fred_connector.py  india_compliance_connector.py  india_macro_connector.py  market_detector.py  news_connector.py  polygon_connector.py  sec_connector.py  serper_connector.py  tavily_connector.py  technical_engine.py  ticker_search.py  (+2 more)
(+176 files in other folders)
