[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equityiq"
version = "0.1.0"
description = "Multi-agent stock intelligence system"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.25,<2",
    "google-generativeai>=0.8,<1",
    "google-ai-generativelanguage>=0.6.10,<0.7",
    "google-cloud-firestore>=2.20,<3",
    "google-cloud-aiplatform>=1.132,<2",
    "google-cloud-iam>=2.15,<3",
    "google-genai>=1.56,<2",
    "protobuf>=5.29,<7",
    "grpcio>=1.62,<2",
    "opentelemetry-api>=1.36,<1.39",
    "opentelemetry-sdk>=1.36,<1.39",
    "sse-starlette>=2.0,<4",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0,<3",
    "pydantic-settings",
    "httpx",
    "aiohttp",
    "cachetools",
    "aiosqlite",
    "xgboost",
    "scikit-learn",
    "pandas",
    "numpy",
    "joblib",
    "python-dotenv",
    "beautifulsoup4",
    "lxml",
    "colorlog",
    "yfinance",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pytest-mock",
    "httpx",
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["config*", "tools*", "models*", "memory*", "agents*", "evaluation*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
